<resources>
    <string name="app_name">Media Notifier</string>

    <string name="title_settings">Settings</string>

    <string name="action_settings">Settings</string>
    <string name="action_contact">Contact</string>
    <string name="action_about">About</string>
    <string name="action_remove">Remove Item</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_lookup">Lookup Item</string>
    <string name="button_tvshows">TV Shows</string>
    <string name="button_movies">Movies</string>
    <string name="button_artists">Artists</string>
    <string name="button_games">Games</string>
    <string name="button_delete_tv_all">Delete TV Shows</string>
    <string name="button_delete_movie_all">Delete Movies</string>
    <string name="button_delete_artist_all">Delete Music</string>
    <string name="button_delete_game_all">Delete Game</string>

    <string name="settings_played_check">Mark newly added but released items as played?</string>

    <string name="settings_notification_time">Set the time to receive notifications:</string>
    <string name="settings_notification_offsets">Set the release date offset for notifications:</string>
    <string name="settings_notification_delete">**WARNING** Delete Data **WARNING**</string>
    <string name="settings_custom">Custom external address ({} for var replace)</string>

    <string name="toast_db_adding">Adding to Database</string>
    <string name="toast_db_added">Added</string>
    <string name="toast_db_updated">Updated</string>
    <string name="toast_db_table_cleared">Table cleared</string>
    <string name="toast_no_results">No Matches</string>

    <string name="notification_title">You\'ve got unplayed media</string>
    <string name="notification_text">New media count: </string>

    <string name="tmdb">TMDB</string>
    <string name="musicbrainz">musicbrainz</string>
    <string name="rawg">RAWG</string>

    <string name="footer_text">Powered By:</string>
    <string name="placeholder_title">-title-</string>
    <string name="placeholder_overview">-overview-</string>
    <string name="placeholder_date">-date-</string>
    <string name="placeholder_subtext">-subtext-</string>
    <string name="initial_count_notification">0</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="lorem_ipsum_short">Lorem ipsum dolor sit amet</string>
    <string name="default_button_persistent">btn_persistent</string>
    <string name="default_unplayed">UNPLAYED</string>
    <string name="default_played">PLAYED</string>
    <string name="default_select_an_offset">Select an Offset</string>
    <string name="default_ok">OK</string>
    <string name="default_select_a_time">Select a Time</string>
</resources>
