<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/style_list_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp">

    <RelativeLayout
        android:id="@+id/list_item_generic_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/list_item_generic_right"
        android:paddingStart="0dp"
        android:paddingEnd="0dp">

        <TextView
            android:id="@+id/list_item_generic_subtitle"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:gravity="start|center"
            android:maxLines="1"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:text="@string/placeholder_subtext" />

        <TextView
            android:id="@+id/list_item_generic_date"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:gravity="end|center"
            android:maxLines="1"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:text="@string/placeholder_date" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/list_item_generic_primarybar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/list_item_generic_header"
        android:layout_toStartOf="@id/list_item_generic_right"
        android:paddingStart="0dp"
        android:paddingEnd="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="0dp"
            android:paddingEnd="0dp">

            <ImageView
                android:id="@+id/list_item_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/lorum_ipsum"
                android:focusable="false"
                android:gravity="start|center"
                android:paddingStart="0dp"
                android:paddingEnd="0dp" />

            <TextView
                android:id="@+id/list_item_generic_title"
                style="@style/h1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/list_item_picture"
                android:gravity="start|center"
                android:maxLines="1"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:text="@string/placeholder_title" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/list_item_generic_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:paddingStart="10dp"
        android:paddingEnd="0dp">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/list_item_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:gravity="end|bottom"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:textOff="@string/default_played"
            android:textOn="@string/default_unplayed" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/list_item_generic_secondarybar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/list_item_generic_primarybar"
        android:orientation="horizontal"
        android:paddingStart="0dp"
        android:paddingTop="0dp"
        android:paddingEnd="0dp">

        <TextView
            android:id="@+id/list_item_generic_overview"
            style="@style/text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:text="@string/placeholder_overview" />
    </RelativeLayout>


    <TextView
        android:id="@+id/list_item_generic_id"
        android:layout_width="0dp"
        android:layout_height="0dp" />
</RelativeLayout>
