<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.ActivityMain">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_central"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".activities.ActivityMain"
        tools:showIn="@layout/activity_main">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.core.widget.ContentLoadingProgressBar
                android:id="@+id/main_progress"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                />

            <RelativeLayout
                style="@style/style_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/main_button_tv_find"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:backgroundTint="@color/grey_01"
                    android:src="@android:drawable/ic_search_category_default"
                    app:borderWidth="0dp"
                    android:contentDescription="@string/default_content_description"  />

                <Button
                    android:id="@+id/main_button_tv"
                    style="@style/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="15dp"
                    android:layout_toEndOf="@id/main_button_tv_find"
                    android:text="@string/button_tvshows" />

                <TextView
                    android:id="@+id/main_button_tv_notification"
                    style="@style/notification"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="5dp"
                    android:clickable="true"
                    android:elevation="10dp"
                    android:gravity="center"
                    android:text="@string/initial_count_notification"
                    android:focusable="true" />

            </RelativeLayout>

            <RelativeLayout
                style="@style/style_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/main_button_movie_find"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_margin="8dp"
                    android:backgroundTint="@color/grey_01"
                    android:src="@android:drawable/ic_search_category_default"
                    app:borderWidth="0dp"
                    android:contentDescription="@string/default_content_description" />

                <Button
                    android:id="@+id/main_button_movie"
                    style="@style/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="15dp"
                    android:layout_toEndOf="@id/main_button_movie_find"
                    android:text="@string/button_movies" />

                <TextView
                    android:id="@+id/main_button_movie_notification"
                    style="@style/notification"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="5dp"
                    android:clickable="true"
                    android:elevation="10dp"
                    android:gravity="center"
                    android:text="@string/initial_count_notification"
                    android:focusable="true" />

            </RelativeLayout>

            <RelativeLayout
                style="@style/style_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/main_button_artist_find"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:backgroundTint="@color/grey_01"
                    android:src="@android:drawable/ic_search_category_default"
                    app:borderWidth="0dp"
                    android:contentDescription="@string/default_content_description" />

                <Button
                    android:id="@+id/main_button_artist"
                    style="@style/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="15dp"
                    android:layout_toEndOf="@id/main_button_artist_find"
                    android:text="@string/button_artists" />

                <TextView
                    android:id="@+id/main_button_artist_notification"
                    style="@style/notification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="5dp"
                    android:clickable="true"
                    android:elevation="10dp"
                    android:gravity="center"
                    android:text="@string/initial_count_notification"
                    android:focusable="true" />

            </RelativeLayout>

            <RelativeLayout
                style="@style/style_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/main_button_game_find"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:backgroundTint="@color/grey_01"
                    android:src="@android:drawable/ic_search_category_default"
                    app:borderWidth="0dp"
                    android:contentDescription="@string/default_content_description" />

                <Button
                    android:id="@+id/main_button_game"
                    style="@style/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="15dp"
                    android:layout_toEndOf="@id/main_button_game_find"
                    android:text="@string/button_games" />

                <TextView
                    android:id="@+id/main_button_game_notification"
                    style="@style/notification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="5dp"
                    android:clickable="true"
                    android:elevation="10dp"
                    android:gravity="center"
                    android:text="@string/initial_count_notification"
                    android:focusable="true" />

            </RelativeLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom">

        <RelativeLayout
            style="@style/style_footer"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_gravity="bottom">

            <TextView
                android:id="@+id/main_footer_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:text="@string/footer_text"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/badge_tmdb"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_toStartOf="@+id/badge_musicbrainz"
                android:contentDescription="@string/tmdb"
                android:src="@drawable/img_external_tmdb_wrapper" />

            <ImageView
                android:id="@+id/badge_musicbrainz"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_toStartOf="@+id/badge_rawg"
                android:contentDescription="@string/musicbrainz"
                android:src="@drawable/img_external_musicbrainz_wrapper" />

            <ImageView
                android:id="@+id/badge_rawg"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:contentDescription="@string/rawg"
                android:src="@drawable/img_external_rawg_wrapper" />
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
